feat: extend metric declarations api #182