@@ -5,13 +5,16 @@ import static org.assertj.core.api.Assertions.tuple;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
+import com.epam.aidial.evaluation.data.db.model.MetricDeclaration;
 import com.epam.aidial.evaluation.data.db.model.MetricDeclarationVersion;
+import com.epam.aidial.evaluation.data.db.model.MetricDeclarationWithLatestVersion;
 import com.epam.aidial.evaluation.data.db.repository.MetricDeclarationRepository;
 import com.epam.aidial.evaluation.data.db.repository.MetricDeclarationVersionRepository;
 import com.epam.aidial.evaluation.runner.util.RunnerJsonbMapper;
-import com.epam.aidial.evaluation.service.domain.dto.MetricDeclarationVersionResponseDto;
+import com.epam.aidial.evaluation.service.domain.dto.MetricDeclarationWithLatestVersionResponseDto;
 import com.epam.aidial.evaluation.service.domain.filter.FilterParser;
 import com.epam.aidial.evaluation.service.domain.mapper.JsonbMapper;
 import com.epam.aidial.evaluation.service.domain.mapper.MetricDeclarationMapper;
@@ -65,24 +68,48 @@ class MetricDeclarationServiceLatestVersionsTest {
     }
 
     @Test
-    @DisplayName("returns one DTO per declaration with schemas mapped as JSON objects")
-    void returnsOneDtoPerDeclarationWithSchemasAsObjects() {
+    @DisplayName("returns one item per declaration, carrying the declaration's own identity fields")
+    void returnsOneItemPerDeclarationWithDeclarationFields() {
         when(metricDeclarationVersionRepository.findLatestPerMetricDeclaration())
                 .thenReturn(List.of(
-                        version(ACCURACY_ID, 3, "{\"type\":\"object\",\"properties\":{\"threshold\":{}}}", "{}"),
-                        version(LATENCY_ID, 1, "{}", "{\"type\":\"object\"}")));
+                        withLatest(ACCURACY_ID, "Accuracy", 3, "{}", "{}"),
+                        withLatest(LATENCY_ID, "Latency", 1, "{}", "{}")));
 
-        List<MetricDeclarationVersionResponseDto> result = service.getLatestVersions();
+        List<MetricDeclarationWithLatestVersionResponseDto> result = service.getLatestVersions();
 
         assertThat(result)
                 .extracting(
-                        MetricDeclarationVersionResponseDto::getMetricDeclarationId,
-                        MetricDeclarationVersionResponseDto::getSchemaVersion)
-                .containsExactly(tuple(ACCURACY_ID, 3), tuple(LATENCY_ID, 1));
-        assertThat(result.get(0).getConfigSchema()).containsEntry("type", "object");
-        assertThat(result.get(0).getOutputSchema()).isEmpty();
-        assertThat(result.get(1).getConfigSchema()).isEmpty();
-        assertThat(result.get(1).getOutputSchema()).containsEntry("type", "object");
+                        MetricDeclarationWithLatestVersionResponseDto::getId,
+                        MetricDeclarationWithLatestVersionResponseDto::getProviderId,
+                        MetricDeclarationWithLatestVersionResponseDto::getName)
+                .containsExactly(
+                        tuple(ACCURACY_ID, "test-provider", "Accuracy"), tuple(LATENCY_ID, "test-provider", "Latency"));
+        assertThat(result)
+                .extracting(dto -> dto.getLatestVersion().getSchemaVersion())
+                .containsExactly(3, 1);
+        assertThat(result.getFirst().getDescription()).isEqualTo("Accuracy declaration");
+        assertThat(result.getFirst().getCreatedAt()).isEqualTo(1_704_067_200_000L);
+    }
+
+    @Test
+    @DisplayName("nests the version with its schemas mapped as JSON objects")
+    void nestsVersionWithSchemasAsObjects() {
+        when(metricDeclarationVersionRepository.findLatestPerMetricDeclaration())
+                .thenReturn(List.of(withLatest(
+                        ACCURACY_ID,
+                        "Accuracy",
+                        3,
+                        "{\"type\":\"object\",\"properties\":{\"threshold\":{}}}",
+                        "{\"type\":\"object\"}")));
+
+        List<MetricDeclarationWithLatestVersionResponseDto> result = service.getLatestVersions();
+
+        var version = result.getFirst().getLatestVersion();
+        assertThat(version.getMetricDeclarationId()).isEqualTo(ACCURACY_ID);
+        assertThat(version.getConfigSchema()).containsEntry("type", "object");
+        assertThat(version.getInputSchema()).isEmpty();
+        assertThat(version.getOutputSchema()).containsEntry("type", "object");
+        assertThat(version.getDescription()).isEqualTo("Accuracy version 3");
     }
 
     @Test
@@ -98,38 +125,52 @@ class MetricDeclarationServiceLatestVersionsTest {
     @DisplayName("preserves the repository result order")
     void preservesRepositoryOrder() {
         when(metricDeclarationVersionRepository.findLatestPerMetricDeclaration())
-                .thenReturn(List.of(version(LATENCY_ID, 1, "{}", "{}"), version(ACCURACY_ID, 2, "{}", "{}")));
+                .thenReturn(List.of(
+                        withLatest(LATENCY_ID, "Latency", 1, "{}", "{}"),
+                        withLatest(ACCURACY_ID, "Accuracy", 2, "{}", "{}")));
 
-        List<MetricDeclarationVersionResponseDto> result = service.getLatestVersions();
+        List<MetricDeclarationWithLatestVersionResponseDto> result = service.getLatestVersions();
 
         assertThat(result)
-                .extracting(MetricDeclarationVersionResponseDto::getMetricDeclarationId)
+                .extracting(MetricDeclarationWithLatestVersionResponseDto::getId)
                 .containsExactly(LATENCY_ID, ACCURACY_ID);
     }
 
     @Test
-    @DisplayName("resolves all latest versions with one repository query instead of one per declaration")
+    @DisplayName("resolves declarations and versions with one repository query, not one query per declaration")
     void usesSingleRepositoryQuery() {
         when(metricDeclarationVersionRepository.findLatestPerMetricDeclaration())
-                .thenReturn(List.of(version(ACCURACY_ID, 1, "{}", "{}"), version(LATENCY_ID, 1, "{}", "{}")));
+                .thenReturn(List.of(
+                        withLatest(ACCURACY_ID, "Accuracy", 1, "{}", "{}"),
+                        withLatest(LATENCY_ID, "Latency", 1, "{}", "{}")));
 
         service.getLatestVersions();
 
         verify(metricDeclarationVersionRepository).findLatestPerMetricDeclaration();
         verify(metricDeclarationVersionRepository, never()).findLatestByMetricDeclarationId(any());
+        verifyNoInteractions(metricDeclarationRepository);
     }
 
-    private static MetricDeclarationVersion version(
-            UUID declarationId, int schemaVersion, String configSchema, String outputSchema) {
-        return MetricDeclarationVersion.builder()
+    private static MetricDeclarationWithLatestVersion withLatest(
+            UUID declarationId, String name, int schemaVersion, String configSchema, String outputSchema) {
+        MetricDeclaration declaration = MetricDeclaration.builder()
+                .id(declarationId)
+                .providerId("test-provider")
+                .name(name)
+                .displayName(name + " display")
+                .description(name + " declaration")
+                .createdAt(1_704_067_200_000L)
+                .build();
+        MetricDeclarationVersion version = MetricDeclarationVersion.builder()
                 .id(UUID.randomUUID())
                 .metricDeclarationId(declarationId)
                 .schemaVersion(schemaVersion)
                 .configSchema(configSchema)
                 .inputSchema("{}")
                 .outputSchema(outputSchema)
-                .description("description")
-                .createdAt(1704067200000L)
+                .description(name + " version " + schemaVersion)
+                .createdAt(1_704_067_300_000L)
                 .build();
+        return new MetricDeclarationWithLatestVersion(declaration, version);
     }
 }
